Version 1.4.2+svn:
  * language and i18n:
    * updated translations: Russian, Slovak

Version 1.4.2:
 * campaigns
   * Liberty
     * Backport r25650 to fix graphics glitch (bug 11438)
 * language and i18n:
   * updated translations: Chinese, Chinese (Traditional), Croatian, Czech,
     Dutch, Finnish, French, German, Hungarian, Italian, Japanese, Lithuanian,
     Polish, Russian, Serbian, Slovak, Spanish, Turkish

Version 1.4.1:
 * campaigns:
   * Fixed/enforced internal gender id of various female heroes/foes
     (bug #11197)
   * Under the Burning Suns:
     * Minor cosmetic fixes
 * graphics:
   * Fixed broken TC on transport-galleon and drake walking corpse graphics
   * New portraits: Elvish Sorceress
 * language and i18n:
   * new translation: Croatian
   * updated translations: Chinese, Czech, Danish, Dutch, Finnish, French,
     Galician, German, Greek, Hungarian, Italian, Lithuanian, Japanese, Polish,
     Russian, Spanish, Swedish, Turkish, Valencian
 * map editor:
   * fixed not working "Update transition" and make "Delay transition update"
     directly trigger an update when toggled off.
 * miscellaneous and bug fixes:
   * Removed spurious -R linker switch from command line generated by the Boost
     M4 macros
   * Load-game dialog displays a scenario campaign's translated name rather than
     its internal id now
   * wmlxgettext now print some context information about the strings
     extracted (patch #993)
   * added VICTORY_AND_DEFEAT_MUSIC macro and wired it in all mainline
     scenarios that warrant such effects
   * Fixed a border case of unit portrait advancement on which generic portraits
     would be treated as character-specific (affected female Elvish Archer line;
     it also theoretically affected units with [variation]s using different
     portraits)
   * allow configure to be started from directories other as the top dir
     (patch #1002)
   * learn the underlaying terrain so you'll not have a blank like in the unit