@@ -1,6 +1,9 @@
 Version 1.4.2+svn:
-  * language and i18n:
-    * updated translations: Russian, Slovak
+ * language and i18n:
+   * updated translations: Russian, Slovak
+ * miscellaneous and bug fixes:
+   * fixed an alignement issue which caused a SIGBUS on a Sparc 
+     (debian bug #426318)
 
 Version 1.4.2:
  * campaigns
